--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
 	<header id="masthead" ng-controller="MastheadCtrl">
 		<div class="wrap">
 			<h1><a href="#/">Playste</a></h1>
-			<button>Save</button>
+			<button ng-click="savePlaylist()">Save</button>
 			<button>Share</button>
 			<section id="controls">
 				<button><i class="fa fa-step-backward"></i></button>
