--- a/app/index.html
+++ b/app/index.html
@@ -25,23 +25,6 @@
 		<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
 
-	<header id="masthead" ng-controller="ControlsCtrl">
-		<div class="wrap">
-			<h1><a href="#/">Playste</a></h1>
-			<button ng-click="savePlaylist()" ng-class="{'saved': isSaved(), 'unsaved': !isSaved()}" ng-bind="isSaved() ? 'Saved': 'Save'"></button>
-			<button>Share</button>
-			<section id="controls">
-				<button><i class="fa fa-step-backward"></i></button>
-				<button ng-click="togglePlay()"><i class="fa" ng-class="{'fa-play': playerStatus == '2', 'fa-pause': playerStatus == '1', 'fa-bolt': playerStatus == (false || 0)}"></i></button>
-				<button ng-click="next()"><i class="fa fa-step-forward"></i></button>
-			</section>
-			<form ng-submit="addSong(newSongUrl)" ng-class="{'disabled': addingSong}">
-				<input type="text" ng-model="newSongUrl" ng-disabled="addingSong" placeholder="Paste a URL from Youtube or SoundCloud">
-				<button type="submit">Add</button>
-			</form>
-		</div>
-	</header>
-
 	<!-- Add your site or application content here -->
 	<div ng-view=""></div>
 
@@ -81,6 +64,18 @@
 	<script src="bower_components/angular-cookies/angular-cookies.js"></script>
 	<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 	<script src="bower_components/angular-route/angular-route.js"></script>
+	<script src="bower_components/eventEmitter/EventEmitter.js"></script>
+	<script src="bower_components/eventie/eventie.js"></script>
+	<script src="bower_components/imagesloaded/imagesloaded.js"></script>
+	<script src="bower_components/get-style-property/get-style-property.js"></script>
+	<script src="bower_components/get-size/get-size.js"></script>
+	<script src="bower_components/doc-ready/doc-ready.js"></script>
+	<script src="bower_components/jquery-bridget/jquery.bridget.js"></script>
+	<script src="bower_components/matches-selector/matches-selector.js"></script>
+	<script src="bower_components/outlayer/item.js"></script>
+	<script src="bower_components/outlayer/outlayer.js"></script>
+	<script src="bower_components/masonry/masonry.js"></script>
+	<script src="bower_components/angular-animate/angular-animate.js"></script>
 	<!-- endbower -->
 	<!-- endbuild -->
 
@@ -89,9 +84,12 @@
 		<script src="scripts/services/youtubeAPI.js"></script>
 		<script src="scripts/services/SoundCloudAPI.js"></script>
 		<script src="scripts/controllers/playlist.js"></script>
+		<script src="scripts/controllers/splash.js"></script>
 		<script src="scripts/services/playerservice.js"></script>
 		<script src="scripts/services/playlistservice.js"></script>
 		<script src="scripts/controllers/controls.js"></script>
+		<script src="scripts/services/songservice.js"></script>
+		<script src="scripts/services/urlservice.js"></script>
 		<!-- endbuild -->
 		
 </body>
