picking it up again...

--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,7 @@
 	<script src="bower_components/outlayer/outlayer.js"></script>
 	<script src="bower_components/masonry/masonry.js"></script>
 	<script src="bower_components/angular-animate/angular-animate.js"></script>
+	<script src="bower_components/underscore/underscore.js"></script>
 	<!-- endbower -->
 	<!-- endbuild -->
 
@@ -90,6 +91,7 @@
 		<script src="scripts/controllers/controls.js"></script>
 		<script src="scripts/services/songservice.js"></script>
 		<script src="scripts/services/urlservice.js"></script>
+		<script src="scripts/services/underscore.js"></script>
 		<!-- endbuild -->
 		
 </body>
