--- a/app/index.html
+++ b/app/index.html
@@ -89,9 +89,12 @@
 		<script src="scripts/services/playerservice.js"></script>
 		<script src="scripts/services/playlistservice.js"></script>
 		<script src="scripts/controllers/controls.js"></script>
+		<script src="scripts/controllers/login.js"></script>
 		<script src="scripts/services/songservice.js"></script>
 		<script src="scripts/services/urlservice.js"></script>
 		<script src="scripts/services/underscore.js"></script>
+		<script src="scripts/services/userservice.js"></script>
+<script src="scripts/directives/modal.js"></script>
 		<!-- endbuild -->
 		
 </body>
